fix: table overflow and number sorting

--- a/src/components/table/table-alpha.sass
+++ b/src/components/table/table-alpha.sass
@@ -7,6 +7,7 @@
   border-radius: 4px
   position: relative
   min-height: 200px
+  overflow: auto
   table
     min-width: 100%
     width: auto
